--- a/src/cookie/example/index.html
+++ b/src/cookie/example/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./index.js"></script>
     <title>Cookie</title>
 </head>
 
 <body>
-
+    <script>
+        const cookie = new Cookie();
+        // debugger;
+        cookie.setItem("zhen22", "zhen222")
+        // cookie.removeItem("zhen22");
+    </script>
 </body>
 
 </html>
